fix: removed background repeat

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h2>My contact info:</h2>
         <ul>
-            <li> <strong>Phone number:</strong> <a href="tel:+375293973900">+375 29 397 39 00</a></li>
+            <li> <strong>Phone number:</strong> <a href="tel:+375293973900">+375293973900</a></li>
             <li> <strong>E-mail:</strong>     <a href="mailto:ricerzskemocne@gmail.com">ricerzskemocne@gmail.com</a></li>
             <li> <strong>GitHub:</strong> <a href="https://github.com/NOTTOODEPTH">NOTTOODEPTH</a></li>
         </ul>
@@ -22,9 +22,9 @@
 
     <h2>Code example:</h2>
         <code>
-              function multiply(a, b) { <Br>
-              return a * b; <Br>
-              }<Br>
+              function multiply(a, b) { <br>
+              return a * b; <br>
+              }<br>
         </code>
 
     <h2>Work experience:</h2>
